# pokarm-bot

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  auth.py  bot.py  compose.yml  fabfile.py  handlers.py  hello.py  main.py  models.py  pyproject.toml  run.py  settings.py
alembic/: env.py
alembic/versions/: 20241110195548_fe3153ca9382_create_recipes_table.py  20241110195730_2225a08e2b00_add_fields_for_recipes.py  20241110200109_99a1be22fa41_remove_message_id.py  bf0c13567703_create_recipe_table.py
bot/: auth.py  handlers.py  models.py  tasks.py
