[project]
name = "pokarm-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "pytelegrambotapi>=4.23.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
]

[dependency-groups]
dev = [
    "fabric>=3.2.2",
    "litecli>=1.12.3",
]
